@@ -44,6 +44,7 @@ pmstring_a_asm_sources = \
 	strchrnul_P.S \
 	strcmp_P.S _strcmp_P.S \
 	strcpy_P.S _strcpy_P.S \
+	stpcpy_P.S \
 	strcspn_P.S \
 	strlcat_P.S \
 	strlcpy_P.S \
